[package]
name = "popone"
version = "0.2.7"
edition = "2021"
license = "0BSD"

[lib]
name = "popone"
path = "src/lib.rs"

[[bin]]
name = "popone"
path = "src/main.rs"

[dependencies]
gltf        = { version = "1.4", features = ["extensions", "extras"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
byteorder   = "1.5"
glam        = "0.29"
flate2      = "1"
tar         = "0.4"
image       = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga"] }
anyhow      = "1"
thiserror   = "2"
log         = "0.4"
env_logger  = "0.11"
fern        = "0.7"
chrono      = "0.4"
clap        = { version = "4", features = ["derive"] }
encoding_rs = "0.8"
zip          = { version = "2", default-features = false, features = ["deflate"] }
sevenz-rust2 = "0.20"

# ビューア用（feature gate で CLI ビルドには影響なし）
eframe   = { version = "0.31", optional = true, default-features = false, features = ["wgpu", "default_fonts"] }
rfd      = { version = "0.15", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = []
viewer = ["eframe", "rfd", "bytemuck", "pollster"]

